Fix overflow so that color-by dropdown doesn't go weird

--- a/weyl-frontend/app/components/LayerList/styles.css
+++ b/weyl-frontend/app/components/LayerList/styles.css
@@ -5,7 +5,7 @@
 
 .innerLayerList {
   pointer-events: all;
-  overflow: scroll;
+  overflow: visible;
   max-height: 100%;
 }
 
